--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,18 @@
 				</ul>
 			</nav>
 
-		<h1>Videos and Photos</h1>
+		<h1>Photos and Videos</h1>
 
 </body>
 <body>
+	<img src="RickandMorty.jpeg">
+
+	<img src="Rick_Morty_Summer.jpeg">
+
+	<img src="Family_in_hamster_buttworld.jpeg">
+
+	<img src="Throughportal.jpeg">
+
 	<h2>Rick and Summer Fighting the Devil</h2>
 	<p>Summer gets a job working for the devil and after some confrontation Rick ends up having a feud with the devil. After the feud ends the devil fires summer which forces her and rick to beat the living crap out of him.</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/f_iqM6iy7sY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -34,7 +42,9 @@
 	<h2>Post-Apocalyptic World</h2>
 	<p>Rick, Summer and Morty venture into a post-apocalyptic world looking for a rock that can power up any source that needs energy to be used.</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/3GWbdYtBKjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 	
+
 	<h2>Jerry is a Parasitic Predator</h2>
 	<p>Jerry tries to kill Rick but ends up failing then Rick explains to him why it would of never worked because of how pathetic he is.</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/aCzmOknrN70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -42,5 +52,7 @@
 	<h2>PICKLE RIIIICCKK</h2>
 	<p>If you don't know the story of Pickle Rick than you clearly dont keep up with current events and the trend that took over the world for a month or two. Rick turns himself into a pickle to avoid going to therapy with his family and ends up in the sewers fighting for his life.</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/9ajcpuF4nv8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	
 </body>
 </html>
